first commit after fork

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,53 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@inproceedings{nalccakan2018decision,
+  title={Decision of Neural Networks Hyperparameters with a Population-based Algorithm},
+  author={Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Ensari, Tolga},
+  booktitle={The Fourth International Conference on Machine Learning, Optimization, and Data Science},
+  volume={11331},
+  year={2018}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@misc{nalccakan2015sosyal,
+  title={Sosyal Medya Verileri {\"U}zerinde Yapay {\"O}{\u{g}}renme ile Duygu Analizi {\c{C}}al{\i}{\c{s}}mas{\i}},
+  author={Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Bayramo{\u{g}}lu, {\c{S}}an S{\i}tk{\i} and Tuna, Samed.},
+  journal={Technical Report},
+  year={2015}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@inproceedings{gunay2018digital,
+  title={Digital Data Forgetting: A Machine Learning Approach},
+  author={G{\"u}nay, Melike and Y{\i}ld{\i}z, Eyy{\"u}p and Nal{\c{c}}akan, Ya{\u{g}}{\i}z and A{\c{s}}{\i}ro{\u{g}}lu, B and Zencirli, A and Mete, B and Ensari, Tolga},
+  booktitle={2018 2nd International Symposium on Multidisciplinary Studies and Innovative Technologies (ISMSIT)},
+  pages={1--4},
+  year={2018},
+  organization={DOI: 10.1109/ISMSIT.2018.8567046}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@incollection{ensari2019overview,
+  title={Overview of Machine Learning Approaches for Wireless Communication},
+  author={Ensari, Tolga and Nal{\c{c}}akan, Ya{\u{g}}{\i}z and G{\"u}nay, Melike and Y{\i}ld{\i}z, Eyy{\"u}p},
+  booktitle={Next-Generation Wireless Networks Meet Advanced Machine Learning Applications},
+  pages={123--140},
+  year={2019},
+  publisher={IGI Global}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{acsirouglu2019automatic,
+  title={Automatic HTML code generation from mock-up images using machine learning techniques},
+  author={A{\c{s}}{\i}ro{\u{g}}lu, Batuhan and Mete, B{\"u}{\c{s}}ta R{\"u}meysa and Y{\i}ld{\i}z, Eyy{\"u}p and Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Sezen, Alper and Da{\u{g}}tekin, Mustafa and Ensari, Tolga},
+  booktitle={2019 Scientific Meeting on Electrical-Electronics \& Biomedical Engineering and Computer Science (EBBT)},
+  pages={1--4},
+  year={2019},
+  organization={Ieee}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{yilmaz2021novel,
+  title={A Novel Feature to Predict Buggy Changes in a Software System},
+  author={Y{\i}lmaz, Rahime and Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Haktan{\i}r, Elif},
+  booktitle={International Conference on Intelligent and Fuzzy Systems},
+  pages={407--414},
+  year={2021},
+  organization={Springer}
 }
