update on pages and publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,15 +1,16 @@
 ---
 ---
 
-@inproceedings{nalccakan2018decision,
+@inproceedings{nalcakan2018decision,
   title={Decision of Neural Networks Hyperparameters with a Population-based Algorithm},
   author={Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Ensari, Tolga},
   booktitle={The Fourth International Conference on Machine Learning, Optimization, and Data Science},
   volume={11331},
-  year={2018}
+  year={2018},
+  selected={true},
 }
 
-@misc{nalccakan2015sosyal,
+@misc{nalcakan2015sosyal,
   title={Sosyal Medya Verileri {\"U}zerinde Yapay {\"O}{\u{g}}renme ile Duygu Analizi {\c{C}}al{\i}{\c{s}}mas{\i}},
   author={Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Bayramo{\u{g}}lu, {\c{S}}an S{\i}tk{\i} and Tuna, Samed.},
   journal={Technical Report},
@@ -22,7 +23,8 @@
   booktitle={2018 2nd International Symposium on Multidisciplinary Studies and Innovative Technologies (ISMSIT)},
   pages={1--4},
   year={2018},
-  organization={DOI: 10.1109/ISMSIT.2018.8567046}
+  organization={DOI: 10.1109/ISMSIT.2018.8567046},
+  selected={true},
 }
 
 @incollection{ensari2019overview,
@@ -31,7 +33,8 @@
   booktitle={Next-Generation Wireless Networks Meet Advanced Machine Learning Applications},
   pages={123--140},
   year={2019},
-  publisher={IGI Global}
+  publisher={IGI Global},
+  selected={true},
 }
 
 @inproceedings{acsirouglu2019automatic,
@@ -40,7 +43,8 @@
   booktitle={2019 Scientific Meeting on Electrical-Electronics \& Biomedical Engineering and Computer Science (EBBT)},
   pages={1--4},
   year={2019},
-  organization={Ieee}
+  organization={Ieee},
+  selected={true},
 }
 
 @inproceedings{yilmaz2021novel,
@@ -50,4 +54,12 @@
   pages={407--414},
   year={2021},
   organization={Springer}
+}
+
+@article{nalcakan2022monocular,
+  title={Monocular Vision-based Prediction of Cut-in Maneuvers with LSTM Networks},
+  author={Nalcakan, Yagiz and Bastanlar, Yalin},
+  journal={arXiv preprint arXiv:2203.10707},
+  year={2022},
+  selected={true},
 }
