--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,7 @@
   journal={arXiv preprint arXiv:2203.10707},
   year={2022},
   selected={true},
+  url={https://arxiv.org/abs/2203.10707},
 }
 
 @inproceedings{yilmaz2021novel,
@@ -14,7 +15,8 @@
   booktitle={International Conference on Intelligent and Fuzzy Systems},
   pages={407--414},
   year={2021},
-  organization={Springer}
+  organization={Springer},
+  url={https://link.springer.com/chapter/10.1007/978-3-030-85577-2_48},
 }
 
 @incollection{ensari2019overview,
@@ -25,6 +27,7 @@
   year={2019},
   publisher={IGI Global},
   selected={true},
+  url={https://www.igi-global.com/chapter/overview-of-machine-learning-approaches-for-wireless-communication/221429},
 }
 
 @inproceedings{acsirouglu2019automatic,
@@ -35,6 +38,7 @@
   year={2019},
   organization={Ieee},
   selected={true},
+  url={https://ieeexplore.ieee.org/abstract/document/8741736},
 }
 
 @inproceedings{nalcakan2018decision,
@@ -44,6 +48,7 @@
   volume={11331},
   year={2018},
   selected={true},
+  url={https://link.springer.com/chapter/10.1007/978-3-030-13709-0_23},
 }
 
 @inproceedings{gunay2018digital,
@@ -54,12 +59,14 @@
   year={2018},
   organization={DOI: 10.1109/ISMSIT.2018.8567046},
   selected={true},
+  url={https://doi.org/10.1109/ISMSIT.2018.8567046},
 }
 
 @misc{nalcakan2015sosyal,
   title={Sosyal Medya Verileri {\"U}zerinde Yapay {\"O}{\u{g}}renme ile Duygu Analizi {\c{C}}al{\i}{\c{s}}mas{\i}},
   author={Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Bayramo{\u{g}}lu, {\c{S}}an S{\i}tk{\i} and Tuna, Samed.},
   journal={Technical Report},
-  year={2015}
+  year={2015},
+  url={https://www.researchgate.net/publication/280938376_Sosyal_Medya_Verileri_Uzerinde_Yapay_Ogrenme_ile_Duygu_Analizi_Calismasi},
 }
 
