--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @article{nalcakan2022monocular,
   title={Monocular Vision-based Prediction of Cut-in Maneuvers with LSTM Networks},
-  author={Nalcakan, Yagiz and Bastanlar, Yalin},
+  author={Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Bastanlar, Yalin},
   journal={arXiv preprint arXiv:2203.10707},
   year={2022},
   selected={true},
