--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,7 @@
   journal={arXiv preprint arXiv:2203.10707},
   year={2022},
   selected={true},
+  arxiv={2203.10707},
   url={https://arxiv.org/abs/2203.10707},
 }
 
