pub links added

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   year={2022},
   selected={true},
   arxiv={2203.10707},
-  url={https://arxiv.org/abs/2203.10707},
+  html={https://arxiv.org/abs/2203.10707},
 }
 
 @inproceedings{yilmaz2021novel,
@@ -17,7 +17,7 @@
   pages={407--414},
   year={2021},
   organization={Springer},
-  url={https://link.springer.com/chapter/10.1007/978-3-030-85577-2_48},
+  html={https://link.springer.com/chapter/10.1007/978-3-030-85577-2_48},
 }
 
 @incollection{ensari2019overview,
@@ -28,7 +28,7 @@
   year={2019},
   publisher={IGI Global},
   selected={true},
-  url={https://www.igi-global.com/chapter/overview-of-machine-learning-approaches-for-wireless-communication/221429},
+  html={https://www.igi-global.com/chapter/overview-of-machine-learning-approaches-for-wireless-communication/221429},
 }
 
 @inproceedings{acsirouglu2019automatic,
@@ -39,7 +39,7 @@
   year={2019},
   organization={Ieee},
   selected={true},
-  url={https://ieeexplore.ieee.org/abstract/document/8741736},
+  html={https://ieeexplore.ieee.org/abstract/document/8741736},
 }
 
 @inproceedings{nalcakan2018decision,
@@ -49,7 +49,7 @@
   volume={11331},
   year={2018},
   selected={true},
-  url={https://link.springer.com/chapter/10.1007/978-3-030-13709-0_23},
+  html={https://link.springer.com/chapter/10.1007/978-3-030-13709-0_23},
 }
 
 @inproceedings{gunay2018digital,
@@ -60,7 +60,7 @@
   year={2018},
   organization={DOI: 10.1109/ISMSIT.2018.8567046},
   selected={true},
-  url={https://doi.org/10.1109/ISMSIT.2018.8567046},
+  html={https://doi.org/10.1109/ISMSIT.2018.8567046},
 }
 
 @misc{nalcakan2015sosyal,
@@ -68,6 +68,6 @@
   author={Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Bayramo{\u{g}}lu, {\c{S}}an S{\i}tk{\i} and Tuna, Samed.},
   journal={Technical Report},
   year={2015},
-  url={https://www.researchgate.net/publication/280938376_Sosyal_Medya_Verileri_Uzerinde_Yapay_Ogrenme_ile_Duygu_Analizi_Calismasi},
+  html={https://www.researchgate.net/publication/280938376_Sosyal_Medya_Verileri_Uzerinde_Yapay_Ogrenme_ile_Duygu_Analizi_Calismasi},
 }
 
