--- a/_posts/2015-07-15-code.md
+++ b/_posts/2015-07-15-code.md
@@ -5,6 +5,7 @@ date: 2015-07-15 15:09:00
 description: an example of a blog post with some code
 tags: formatting code
 categories: sample-posts
+published: false
 ---
 This theme implements a built-in Jekyll feature, the use of Rouge, for syntax highlighting.
 It supports more than 100 languages.
@@ -12,7 +13,7 @@ This example is in C++.
 All you have to do is wrap your code in a liquid tag:
 
 {% raw  %}
-{% highlight c++ linenos %}  <br/> code code code <br/> {% endhighlight %}
+{% highlight c++ linenos %}  `<br/>` code code code `<br/>` {% endhighlight %}
 {% endraw %}
 
 The keyword `linenos` triggers display of line numbers.
