new papers added.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,13 +1,26 @@
 ---
 ---
-@article{nalcakan2022monocular,
-  title={Monocular Vision-based Prediction of Cut-in Maneuvers with LSTM Networks},
-  author={Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Bastanlar, Yalin},
-  journal={arXiv preprint arXiv:2203.10707},
-  year={2022},
+@article{nalcakan2023cut,
+  title={Cut-in maneuver detection with self-supervised contrastive video representation learning},
+  author={Nalcakan, Yagiz and Bastanlar, Yalin},
+  journal={Signal, Image and Video Processing},
+  pages={1--9},
+  year={2023},
   selected={true},
-  arxiv={2203.10707},
-  html={https://arxiv.org/abs/2203.10707},
+  html={https://link.springer.com/article/10.1007/s11760-023-02512-3},
+  publisher={Springer}
+}
+
+@inproceedings{10.1007/978-3-031-40395-8_8,
+author={Nalcakan, Yagiz and Bastanlar, Yalin},
+title={Monocular Vision-Based Prediction of Cut-In Manoeuvres with LSTM Networks},
+booktitle={Science, Engineering Management and Information Technology},
+year={2023},
+publisher={Springer Nature Switzerland},
+pages={111--123},
+isbn={978-3-031-40395-8},
+selected={true},
+html={https://link.springer.com/chapter/10.1007/978-3-031-40395-8_8},
 }
 
 @inproceedings{yilmaz2021novel,
