papers bib added.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
   pages={1--9},
   year={2023},
   selected={true},
+  bibtex_show={true},
   html={https://link.springer.com/article/10.1007/s11760-023-02512-3},
   publisher={Springer}
 }
@@ -20,6 +21,7 @@ publisher={Springer Nature Switzerland},
 pages={111--123},
 isbn={978-3-031-40395-8},
 selected={true},
+bibtex_show={true},
 html={https://link.springer.com/chapter/10.1007/978-3-031-40395-8_8},
 }
 
@@ -30,6 +32,7 @@ html={https://link.springer.com/chapter/10.1007/978-3-031-40395-8_8},
   pages={407--414},
   year={2021},
   organization={Springer},
+  bibtex_show={true},
   html={https://link.springer.com/chapter/10.1007/978-3-030-85577-2_48},
 }
 
@@ -41,6 +44,7 @@ html={https://link.springer.com/chapter/10.1007/978-3-031-40395-8_8},
   year={2019},
   publisher={IGI Global},
   selected={true},
+  bibtex_show={true},
   html={https://www.igi-global.com/chapter/overview-of-machine-learning-approaches-for-wireless-communication/221429},
 }
 
@@ -52,6 +56,7 @@ html={https://link.springer.com/chapter/10.1007/978-3-031-40395-8_8},
   year={2019},
   organization={Ieee},
   selected={true},
+  bibtex_show={true},
   html={https://ieeexplore.ieee.org/abstract/document/8741736},
 }
 
@@ -62,6 +67,7 @@ html={https://link.springer.com/chapter/10.1007/978-3-031-40395-8_8},
   volume={11331},
   year={2018},
   selected={true},
+  bibtex_show={true},
   html={https://link.springer.com/chapter/10.1007/978-3-030-13709-0_23},
 }
 
@@ -73,6 +79,7 @@ html={https://link.springer.com/chapter/10.1007/978-3-031-40395-8_8},
   year={2018},
   organization={DOI: 10.1109/ISMSIT.2018.8567046},
   selected={true},
+  bibtex_show={true},
   html={https://doi.org/10.1109/ISMSIT.2018.8567046},
 }
 
@@ -81,6 +88,7 @@ html={https://link.springer.com/chapter/10.1007/978-3-031-40395-8_8},
   author={Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Bayramo{\u{g}}lu, {\c{S}}an S{\i}tk{\i} and Tuna, Samed.},
   journal={Technical Report},
   year={2015},
+  bibtex_show={true},
   html={https://www.researchgate.net/publication/280938376_Sosyal_Medya_Verileri_Uzerinde_Yapay_Ogrenme_ile_Duygu_Analizi_Calismasi},
 }
 
