paper icons added

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,7 @@
 ---
 ---
 @article{nalcakan2023cut,
+  abbr={SIVP},
   title={Cut-in maneuver detection with self-supervised contrastive video representation learning},
   author={Nalcakan, Yagiz and Bastanlar, Yalin},
   journal={Signal, Image and Video Processing},
@@ -13,6 +14,7 @@
 }
 
 @inproceedings{10.1007/978-3-031-40395-8_8,
+abbr={CCIS},
 author={Nalcakan, Yagiz and Bastanlar, Yalin},
 title={Monocular Vision-Based Prediction of Cut-In Manoeuvres with LSTM Networks},
 booktitle={Science, Engineering Management and Information Technology},
