new papers added

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,22 @@
 ---
 ---
+
+@inproceedings{nalcakan2023asyu,
+  author={Nalcakan, Yagiz and Bastanlar, Yalin},
+  booktitle={2023 Innovations in Intelligent Systems and Applications Conference (ASYU)}, 
+  title={Lane Change Detection with an Ensemble of Image-based and Video-based Deep Learning Models}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-7},
+  selected={true},
+  bibtex_show={true},
+  publisher={IEEE},
+  html={https://ieeexplore.ieee.org/document/10296634},
+  doi={10.1109/ASYU58738.2023.10296634}}
+
+
+
 @article{nalcakan2023cut,
   abbr={SIVP},
   title={Cut-in maneuver detection with self-supervised contrastive video representation learning},
