new papers added

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @inproceedings{nalcakan2023asyu,
+  abbr={IEEE},
   author={Nalcakan, Yagiz and Bastanlar, Yalin},
   booktitle={2023 Innovations in Intelligent Systems and Applications Conference (ASYU)}, 
   title={Lane Change Detection with an Ensemble of Image-based and Video-based Deep Learning Models}, 
@@ -68,6 +69,7 @@ html={https://link.springer.com/chapter/10.1007/978-3-031-40395-8_8},
 }
 
 @inproceedings{acsirouglu2019automatic,
+  abbr={IEEE},
   title={Automatic HTML code generation from mock-up images using machine learning techniques},
   author={A{\c{s}}{\i}ro{\u{g}}lu, Batuhan and Mete, B{\"u}{\c{s}}ta R{\"u}meysa and Y{\i}ld{\i}z, Eyy{\"u}p and Nal{\c{c}}akan, Ya{\u{g}}{\i}z and Sezen, Alper and Da{\u{g}}tekin, Mustafa and Ensari, Tolga},
   booktitle={2019 Scientific Meeting on Electrical-Electronics \& Biomedical Engineering and Computer Science (EBBT)},
