new announcement and paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@article{nalcakan2024pix2next,
+  abbr={preprint},
+  title={Pix2Next: Leveraging Vision Foundation Models for RGB to NIR Image Translation},
+  author={Jin, Youngwan and Park, Incheol and Song, Hanbin and Ju, Hyeongjin and Nalcakan, Yagiz and Kim, Shiho},
+  journal={arXiv preprint arXiv:2409.16706},
+  year={2024},
+  selected={true},
+  bibtex_show={true},
+  html={https://arxiv.org/abs/2409.16706},
+  publisher={arXiv}
+}
+
 @inproceedings{nalcakan2023asyu,
   abbr={IEEE},
   author={Nalcakan, Yagiz and Bastanlar, Yalin},
