--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,31 @@
 ---
 ---
 
+@inproceedings{park2025iviformer,
+  title={IVIFormer: Illumination-Aware Infrared-Visible Image Fusion via Adaptive Domain-Switching Cross Attention},
+  author={Park, Incheol and Jin, Youngwan and Nalcakan, Yagiz and Ju, Hyeongjin and Yeo, Sanghyeop and Kim, Shiho},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={2220--2229},
+  year={2025},
+  selected={true},
+  bibtex_show={true},
+  publisher={ICCVw},
+  html={https://openaccess.thecvf.com/content/ICCV2025W/MIRA/html/Park_IVIFormer_Illumination-Aware_Infrared-Visible_Image_Fusion_via_Adaptive_Domain-Switching_Cross_Attention_ICCVW_2025_paper.html}
+}
+
+
+@article{jin2025rasmd,
+  title={RASMD: RGB And SWIR Multispectral Driving Dataset for Robust Perception in Adverse Conditions},
+  author={Jin, Youngwan and Kovac, Michal and Nalcakan, Yagiz and Ju, Hyeongjin and Song, Hanbin and Yeo, Sanghyeop and Kim, Shiho},
+  journal={arXiv preprint arXiv:2504.07603},
+  year={2025},
+  selected={true},
+  bibtex_show={true},
+  html={https://arxiv.org/abs/2504.07603},
+  publisher={arXiv}
+}
+
+
 @article{nalcakan2024pix2next,
   abbr={preprint},
   title={Pix2Next: Leveraging Vision Foundation Models for RGB to NIR Image Translation},
@@ -12,6 +37,7 @@
   html={https://arxiv.org/abs/2409.16706},
   publisher={arXiv}
 }
+
 
 @inproceedings{nalcakan2023asyu,
   abbr={IEEE},
