--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,7 @@
 ---
 
 @inproceedings{park2025iviformer,
+  abbr={ICCVw},
   title={IVIFormer: Illumination-Aware Infrared-Visible Image Fusion via Adaptive Domain-Switching Cross Attention},
   author={Park, Incheol and Jin, Youngwan and Nalcakan, Yagiz and Ju, Hyeongjin and Yeo, Sanghyeop and Kim, Shiho},
   booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
@@ -15,6 +16,7 @@
 
 
 @article{jin2025rasmd,
+  abbr={arXiv},
   title={RASMD: RGB And SWIR Multispectral Driving Dataset for Robust Perception in Adverse Conditions},
   author={Jin, Youngwan and Kovac, Michal and Nalcakan, Yagiz and Ju, Hyeongjin and Song, Hanbin and Yeo, Sanghyeop and Kim, Shiho},
   journal={arXiv preprint arXiv:2504.07603},
@@ -27,7 +29,7 @@
 
 
 @article{nalcakan2024pix2next,
-  abbr={preprint},
+  abbr={arXiv},
   title={Pix2Next: Leveraging Vision Foundation Models for RGB to NIR Image Translation},
   author={Jin, Youngwan and Park, Incheol and Song, Hanbin and Ju, Hyeongjin and Nalcakan, Yagiz and Kim, Shiho},
   journal={arXiv preprint arXiv:2409.16706},
